feat : added navigation

--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@ function validate() {
         msg.textContent = "Please fill in all fields.";
         msg.style.color = "red";
     } else {
-        window.location.href = "userdash.html";
+        window.location.href = "userdashboard.html";
     }
 }
 </script>
