fix: added navigation

--- a/admindashboard.html
+++ b/admindashboard.html
@@ -183,24 +183,24 @@
   <div class="container">
 
     <div class="card">
-      <h3>Submit Complaint</h3>
-      <p>Report machine issues quickly and describe problems with clarity.</p>
-      <a href="#">File Complaint</a>
+      <h3>Forward Complaint</h3>
+      <p>View the Complaints quickly and assign tasks to the staffs</p>
+      <a href="#">View all Complaints</a>
     </div>
     <div class="card">
       <h3>Track Complaint Status</h3>
       <p>View updates, progress, and resolution stages of your submissions.</p>
-      <a href="#">Track Status</a>
+      <a href="#">Update Status</a>
     </div>
     <div class="card">
-      <h3>My Complaint History</h3>
-      <p>Access previously submitted complaints and their detailed outcomes.</p>
+      <h3>Complaint History</h3>
+      <p>Access all complaints and their detailed outcomes.</p>
       <a href="#">View History</a>
     </div>
     <div class="card">
       <h3>Feedback & Ratings</h3>
-      <p>Share your experience and help improve machine performance.</p>
-      <a href="#">Give Feedback</a>
+      <p>View experience and help improve machine performance.</p>
+      <a href="#">View Feedback</a>
     </div>
   </div>
    <div class="table-container">
@@ -219,22 +219,22 @@
 
       <tbody>
         <tr>
-          <td>CMP-001</td>
-          <td>Conveyor Belt Not Working</td>
+          <td>Complaint 1</td>
+          <td>3D Printer Struck</td>
           <td>2025-02-10</td>
           <td>2025-02-12</td>
           <td style="color:green;font-weight:600;">Resolved</td>
         </tr>
         <tr>
-          <td>CMP-002</td>
-          <td>Hydraulic Press Oil Leakage</td>
+          <td>Complaint 2</td>
+          <td>Car Wiper isn't Functioning</td>
           <td>2025-02-15</td>
           <td>2025-02-16</td>
           <td style="color:green;font-weight:600;">Resolved</td>
         </tr>
         <tr>
-          <td>CMP-003</td>
-          <td>3D Printer Jam</td>
+          <td>Complaint 3</td>
+          <td>Washing machine integrated Dryer isn't functioning</td>
           <td>2025-02-18</td>
           <td>—</td>
           <td style="color:orange;font-weight:600;">In Progress</td>
