--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,7 @@ function validate() {
         msg.textContent = "Please fill in all fields.";
         msg.style.color = "red";
     } else {
-        window.location.href = "userdash.html";
+        window.location.href = "admindashboard.html";
     }
 }
 </script>
