feat: navigation changes

--- a/sprofile.html
+++ b/sprofile.html
@@ -104,7 +104,7 @@
     <h2>Staff Profile</h2>
     <div>
         <a href="staffdashboard.html">Dashboard</a>
-        <a href="logout.html">Logout</a>
+        <a href="slogout.html">Logout</a>
     </div>
 </div>
 
