--- a/aprofile.html
+++ b/aprofile.html
@@ -101,7 +101,7 @@
 <body>
 
 <div class="navbar">
-    <h2>Staff Profile</h2>
+    <h2>Admin Profile</h2>
     <div>
         <a href="admindashboard.html">Dashboard</a>
         <a href="alogout.html">Logout</a>
