--- a/profile.html
+++ b/profile.html
@@ -1,65 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Page</title>
+<meta charset="UTF-8">
+<title>Customer Profile</title>
 
-  <style>
+<style>
     body {
-      margin: 20px;
-      font-family: Arial, sans-serif;
-      color: #000;
+        margin: 0;
+        font-family: "Inter", sans-serif;
+        background: #f1f5f9;
     }
 
-    .item {
-      font-size: 18px;
-      margin-bottom: 20px; 
+    .navbar {
+        background: #1e293b;
+        color: white;
+        padding: 18px 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    .label {
-      font-weight: bold;
-      display: block;
-      margin-bottom: 4px; 
+    .navbar h2 {
+        margin: 0;
+        font-size: 24px;
+        font-weight: 700;
     }
-    
-  </style>
+
+    .navbar a {
+        color: #cbd5e1;
+        margin-left: 20px;
+        text-decoration: none;
+        font-size: 16px;
+        transition: 0.3s;
+    }
+
+    .navbar a:hover {
+        color: white;
+    }
+
+    .profile-container {
+        max-width: 850px;
+        margin: 40px auto;
+        background: white;
+        padding: 35px;
+        border-radius: 20px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+
+    .header-section {
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    .profile-pic {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        background: #cbd5e1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 35px;
+        color: #475569;
+        font-weight: 700;
+        margin-right: 30px;
+    }
+
+    .info h3 {
+        margin: 0;
+        font-size: 26px;
+        color: #1e293b;
+    }
+
+    .info p {
+        margin: 5px 0;
+        font-size: 16px;
+        color: #475569;
+    }
+
+    .details-box {
+        margin-top: 25px;
+    }
+
+    .details-box h4 {
+        font-size: 20px;
+        color: #1e293b;
+        margin-bottom: 10px;
+    }
+
+    .details-box p {
+        font-size: 16px;
+        color: #475569;
+        line-height: 1.6;
+        margin: 6px 0;
+    }
+</style>
+
 </head>
 <body>
 
-  <h2>Profile Details</h2>
-  <div class="item">
-    <span class="label">Name:</span>
-    Sundar Gates
-  </div>
-  <div class="item">
-    <span class="label">Email:</span>
-    customer@example.com
-  </div>
+<div class="navbar">
+    <h2>Customer Profile</h2>
+    <div>
+        <a href="userdashboard.html">Dashboard</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
 
-  <div class="item">
-    <span class="label">Role:</span>
-    Customer
-  </div>
-  <div class="item">
-    <span class="label">Type:</span>
-    Office
-  </div>
-  <div class="item">
-    <span class="label">GSTIN:</span>
-    27AABCU9603R1ZV
-  </div>
-  <div class="item">
-    <span class="label">Office Address:</span>
-    Plot No. 21, Industrial Area
-  </div>
-  <div class="item">
-    <span class="label">Phone:</span>
-    +91 98765 43210
-  </div>
-  <div class="item">
-    <span class="label">Department:</span>
-    3D Printer Machine
-  </div>
+<div class="profile-container">
+
+    <div class="header-section">
+        <div class="profile-pic">S</div>
+        <div class="info">
+            <h3>Adittan</h3>
+            <p>Department: Information Technology</p>
+            <p>Role: Customer</p>
+        </div>
+    </div>
+
+    <div class="details-box">
+        <h4>Personal Information</h4>
+        <p><strong>Email:</strong> adittan@example.com</p>
+        <p><strong>Phone:</strong> +91 99999 99999</p>
+        <p><strong>Address:</strong> 98/99, Chennai, TamilNadu</p>
+    </div>
+    <div class="details-box">
+        <h4>Company Information</h4>
+         <p><strong>Company Name: </strong> Infotech IT Consultancy</p>
+        <p><strong>Company Location: </strong>Chennai, Thiruvananthapuram, Kerala, Mumbai, Bangalore</p>
+        <p><strong>GSTIN Number: </strong> 9876789865887A9987ZG998</p>
+        <p><strong>Purchase History: </strong> 9 Products </p>
+        <p><strong>Company Interests: </strong> Printers, Desktop PCs, Networking Devices</p>
+    </div>
+
+</div>
 </body>
 </html>
